<resources>
    <string name="app_name">Рахат-Лукум</string>
    <string name="search_title">Search</string>
    <string name="menu_item_restaurant">Кафе-ресторан</string>
    <string name="menu_item_order">Заявка</string>
    <string name="menu_item_menulist">Меню</string>
    <string name="menu_item_services">Услуги</string>
    <string name="menu_item_shares">Акции</string>
    <string name="menu_item_photos">Фотогаллерея</string>
    <string name="menu_item_contacts">Контакты</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="tab_item_restaurant">1</string>
    <string name="tab_item_order">2</string>
    <string name="tab_item_menulist">3</string>
    <string name="tab_item_services">4</string>
    <string name="tab_item_shares">5</string>
    <string name="tab_item_photos">6</string>
    <string name="tab_item_contacts">7</string>
</resources>
