<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:orderInCategory="1"
        android:id="@+id/actionRestaurantItem"
        android:title="@string/menu_item_restaurant"
        android:icon="@mipmap/chef" />

    <item
        android:orderInCategory="1"
        android:id="@+id/actionOrderItem"
        android:title="@string/menu_item_order"
        android:icon="@mipmap/ic_border_color" />

    <item
        android:orderInCategory="1"
        android:id="@+id/actionMenulistItem"
        android:title="@string/menu_item_menulist"
        android:icon="@mipmap/ic_restaurant_menu_white_24dp" />
    <item
        android:orderInCategory="1"
        android:id="@+id/actionServicesItem"
        android:title="@string/menu_item_services"
        android:icon="@mipmap/ic_list_white_24dp" />

    <item
        android:orderInCategory="1"
        android:id="@+id/actionSharesItem"
        android:title="@string/menu_item_shares"
        android:icon="@mipmap/ic_star_white_24dp" />

    <item
        android:orderInCategory="1"
        android:id="@+id/actionPhotosItem"
        android:title="@string/menu_item_photos"
        android:icon="@mipmap/ic_photo_library_white_24dp" />

    <item
        android:orderInCategory="1"
        android:id="@+id/actionContactsItem"
        android:title="@string/menu_item_contacts"
        android:icon="@mipmap/ic_phone_white_24dp" />
</menu>